feat: JEP 474 info